--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -77,7 +77,9 @@ footer {
 
 .top_image{
   position: relative;
-  width: 100%;
+  position:fixed;
+  z-index: 1;
+  width: 80%;
   height: 400px;
   display: flex;
   align-items: center;
@@ -119,5 +121,7 @@ footer {
 }
 
 .navbar{
-  position: absolute;
+  position: fixed;
+  z-index: 2;
 }
+
