--- a/app/views/restaurant/homes/top.html.erb
+++ b/app/views/restaurant/homes/top.html.erb
@@ -9,14 +9,14 @@
     <%= link_to "編集する", restaurant_information_edit_path, class:"btn btn-success ml-4"%>
   </h5>
   <div class= "row">
-    <div class= "restaurant_image col-4 mt-4">
+    <div class= "restaurant_image col-4 mt-4 text-center">
       <% if @restaurant.image.attached? %>
         <%= image_tag @restaurant.get_image(200,200) %>
       <% else %>
         <%= image_tag 'default-image.jpg', size: "200x200" %>
       <% end %>
     </div>
-    <div class= "col-8">
+    <div class= "col-8 mt-4">
       <%= @restaurant.introduction %>
     </div>
   </div>
@@ -61,7 +61,7 @@
         </tr>
       </div>
     </table>
-    <div class= "col-7">
+    <div class= "col-7 mt-4">
       <h5>NEWS</h5>
       <%= @restaurant.news %>
     </div>
