--- a/app/views/restaurant/registrations/new.html.erb
+++ b/app/views/restaurant/registrations/new.html.erb
@@ -23,12 +23,10 @@
 
         <div class="row field d-grid text-center mt-3">
           <%= f.label :店舗住所（地域エリア）, class: "col-md-4 text-left" %>
-          <%= f.collection_select :area_id , get_areas,:id,:area %>
-         <!--
-         <div id="areas_select" >
+          <%#= f.collection_select :area_id , get_areas,:id,:area %>
+          <div id="areas_select" >
             <%#= render partial: 'shared/restaurant_areas', locals: { areas: Area.all } %>
-          </div>  
-          -->
+          </div>
         </div>
 
         <div class="row field d-grid text-center mt-3">
