--- a/app/views/restaurant/homes/edit.html.erb
+++ b/app/views/restaurant/homes/edit.html.erb
@@ -28,7 +28,10 @@
 
           <div class="row field d-grid text-center mt-3">
             <%= f.label :地域エリア, class: "col-md-3 text-left" %>
-            <%= render partial: 'shared/areas', locals: { areas: Area.all } %>
+            <%= f.collection_select :area_id , get_areas,:id,:area %>
+            <!--<div id="areas_select" >-->
+              <%#= render partial: 'shared/areas', locals: { areas: Area.all } %>
+            <!--</div>-->
           </div>
 
           <div class="row field d-grid text-center mt-4">
