--- a/app/views/restaurant/menus/new.html.erb
+++ b/app/views/restaurant/menus/new.html.erb
@@ -1,2 +1,52 @@
-<h1>店舗メニュー新規登録</h1>
-<p>Find me in app/views/restaurant/menus/new.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class='col-10 offset-2'>
+      <div class="row">
+        <h4 class="col-3 mt-5">メニュー新規登録</h4>
+      </div>
+
+      <% if @menu.errors.any? %>
+        <%= @menu.errors.count %>件のエラーが発生しました
+        <ul>
+          <% @menu.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+        </ul>
+      <% end %>
+      <%= form_with model: @menu, url: restaurant_menus_path, id: 'new_menu', class: 'new_menu' do |f| %>
+
+        <div class="row field d-grid text-center mt-4">
+          <%= f.label :料理画像, class: "col-md-2" %>
+          <%= f.file_field :image, accept: "image/*", class: "col-md-6" %>
+        </div>
+
+        <div class="row field d-grid text-center mt-3">
+          <%= f.label :メニュー名, class: "col-md-2" %>
+          <%= f.text_field :name, class: "col-md-6" %>
+        </div>
+
+        <div class="row field d-grid text-center mt-3">
+          <p>含まれるアレルゲン</p>
+          <%= f.radio_button :allergen, Allergy.allergens.key(0) %>
+          <%= f.label :allergen, Allergy.allergens_i18n[:credit_card] %>
+          <%= f.radio_button :allergen, Allergy.allergens.key(1) %>
+          <%= f.label :allergen, Allergy.allergens_i18n[:transfer]%>
+        </div>
+        
+        <div class="row field d-grid text-center mt-3">
+          <%= f.label :税抜価格, class: "col-md-2" %>
+          <%= f.text_field :price, class: "col-md-3" %>円
+        </div>
+
+        <div class="row field d-grid text-center mt-3">
+          <%= f.label :メニュー説明, class: "col-md-2" %>
+          <%= f.text_area :introduction, class: "col-md-6" %>
+        </div>
+
+        <div class="row form-group mt-4 ml-35">
+          <%= f.submit '新規登録', class:"btn btn-success col-2" %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
