--- a/app/views/restaurant/menus/new.html.erb
+++ b/app/views/restaurant/menus/new.html.erb
@@ -27,12 +27,22 @@
 
         <div class="row field d-grid text-center mt-3">
           <p>含まれるアレルゲン</p>
-          <%= f.radio_button :allergen, Allergy.allergens.key(0) %>
-          <%= f.label :allergen, Allergy.allergens_i18n[:credit_card] %>
-          <%= f.radio_button :allergen, Allergy.allergens.key(1) %>
-          <%= f.label :allergen, Allergy.allergens_i18n[:transfer]%>
+          <%# @allergies.each do |allergy| %>
+            <!--<label>-->
+              <%#= check_box_tag 'Allergy[]' %>
+              <%#= allergy.allergen %>
+            <!--</label>-->
+          <%# end %>
+          <%= f.collection_check_boxes :allergies, @allergies, :id, :allergen %>
+
+          <!--<%# 配列.each.with_index do |配列の要素,i| %>-->
+          <!--  <label>-->
+          <!--    <%#= check_box_tag 'モデル名[チェックボックスの格納先のカラム名][]', 配列の要素,false,id:"id_contents_#{i}"%>-->
+          <!--    <%#= ラベル名 %>-->
+          <!--  </label>-->
+          <!--<%# end %>-->
         </div>
-        
+
         <div class="row field d-grid text-center mt-3">
           <%= f.label :税抜価格, class: "col-md-2" %>
           <%= f.text_field :price, class: "col-md-3" %>円
