--- a/app/views/restaurant/homes/top.html.erb
+++ b/app/views/restaurant/homes/top.html.erb
@@ -11,10 +11,19 @@
   <div class= "row">
     <div class= "restaurant_image col-4 mt-4 text-center">
       <% if @restaurant.image.attached? %>
-        <%= image_tag @restaurant.get_image(200,200) %>
+        <%= link_to restaurant_path(restaurant) do %>
+          <%= image_tag menu.get_image(200,200) %>
+        <% end %>
       <% else %>
-        <%= image_tag 'default-image.jpg', size: "200x200" %>
+        <%= link_to restaurant_path(@restaurant) do %>
+          <%= image_tag 'default-image.jpg', size: "200x200" %>
+        <% end %>
       <% end %>
+      <%# if @restaurant.image.attached? %>
+        <%#= image_tag @restaurant.get_image(200,200) %>
+      <%# else %>
+        <%#= image_tag 'default-image.jpg', size: "200x200" %>
+      <%# end %>
     </div>
     <div class= "col-8 mt-4">
       <%= @restaurant.introduction %>
