--- a/app/views/restaurant/menus/edit.html.erb
+++ b/app/views/restaurant/menus/edit.html.erb
@@ -1,2 +1,47 @@
-<h1>店舗メニュー編集画面</h1>
-<p>Find me in app/views/restaurant/menus/edit.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-10 offset-1">
+      <div class="row">
+        <h4 class="col-4 mt-5">メニュー編集</h4>
+        <div class="mt-4">
+          <%= form_with model: @menu, url: restaurant_menu_path, method: :patch do |f| %>
+            <div class="row field d-grid text-center mt-4">
+              <%= f.label :料理画像, class: "col-md-2" %>
+              <%= f.file_field :image, accept: "image/*", class: "col-md-6" %>
+            </div>
+
+            <div class="row field d-grid text-center mt-3">
+              <%= f.label :メニュー名, class: "col-md-2" %>
+              <%= f.text_field :name, class: "col-md-6" %>
+            </div>
+
+            <div class="row field d-grid text-center mt-3">
+              <p>含まれるアレルゲン</p>
+              <%# @allergies.each do |allergy| %>
+                <!--<label>-->
+                  <%#= check_box_tag 'Allergy[]' %>
+                  <%#= allergy.allergen %>
+                <!--</label>-->
+              <%# end %>
+              <%= f.collection_check_boxes :allergies, @allergies, :id, :allergen, include_hidden: false %>
+            </div>
+
+            <div class="row field d-grid text-center mt-3">
+              <%= f.label :税抜価格, class: "col-md-2" %>
+              <%= f.text_field :price, class: "col-md-3" %>円
+            </div>
+
+            <div class="row field d-grid text-center mt-3">
+              <%= f.label :メニュー説明, class: "col-md-2" %>
+              <%= f.text_area :introduction, class: "col-md-6" %>
+            </div>
+
+            <div class="form-group mt-4 offset-4">
+              <%= f.submit '新規登録', class:"btn btn-success col-3" %>
+            </div>
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
