--- a/app/views/restaurant/menus/show.html.erb
+++ b/app/views/restaurant/menus/show.html.erb
@@ -1,2 +1,28 @@
-<h1>店舗メニュー詳細</h1>
-<p>Find me in app/views/restaurant/menus/show.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-12">
+      <!--<table class="table table-hover table-inverse mt-4 ml-4 col-md-6">-->
+      <div class="row mt-5">
+        <div class="col-5 mt-5 text-center">
+          <div class="menu_image">
+            <% if @menu.image.attached? %>
+              <%= image_tag @menu.get_image(200,200) %>
+            <% else %>
+              <%= image_tag 'default-image.jpg', size: "200x200" %>
+            <% end %>
+          </div>
+        </div>
+        <div class="col-7 mt-5 item_show">
+          <h5><strong><%= @menu.name %></strong></h5>
+          <div class="mt-3"><%= @menu.introduction %></div>
+          <div class="mt-3"><%= @menu.allergies %></div>
+            <!--<th>税込価格</th>-->
+          <div class="mt-5"><span>税抜価格（税込価格）</span><br><strong class="price"><%= "#{@menu.price}円" %>(<%= "#{@menu.with_tax_price}円" %>)　</strong></div>
+          <div class="col-3 mt-5">
+            <%= link_to "編集する", edit_restaurant_menu_path(@menu), class:"btn btn-success"%>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
