Change restaurants of controller

--- a/app/views/areas/index.html.erb
+++ b/app/views/areas/index.html.erb
@@ -2,5 +2,7 @@
   <%= render "shared/areas", areas: @areas %>
 <% elsif @type == "restaurant" %>
   <%= render "shared/restaurant_areas", areas: @areas %>
+<%# elsif @type == "search" %>
+  <%#= render "shared/search_restaurant_areas", areas: @areas %>
 <% end %>
 
