--- a/app/views/customer/restaurants/search.html.erb
+++ b/app/views/customer/restaurants/search.html.erb
@@ -3,10 +3,45 @@
     <div class="col-md-11 offset-1">
       <!--<h4 class="col-3 mt-5">飲食店検索</h4>-->
       <div class="search-data">
-      <h4 class="col-3 mt-5">飲食店検索</h4>
-      <%= search_form_for @d, url: restaurants_search_path do |f| %>
-        <%= f.label :アレルゲン, class: "col-md-2" %>
-        <%= f.collection_select :menu.name_eq, @restaurants, :sample_product_name, :sample_product_name,  include_blank: '指定なし' %>
-        <%= f.submit '検索' %>
-      <% end %>
+        <h4 class="col-3 mt-5">飲食店検索</h4>
+        <%#= search_form_for @d, url: restaurants_search_path do |f| %>
+          <%#= f.label :アレルゲン, class: "col-md-2" %>
+          <%#= f.collection_select :menu.name_eq, @restaurants, :sample_product_name, :sample_product_name,  include_blank: '指定なし' %>
+          <%#= f.submit '検索' %>
+        <%# end %>
+        <%= form_with model: @restaurant, url: restaurants_path, id: 'search_restaurant', class: 'search_restaurant' do |f| %>
+          <div class="row field d-grid text-center mt-3">
+            <p>アレルゲン選択</p>
+            <%# @allergies.each do |allergy| %>
+              <!--<label>-->
+                <%#= check_box_tag 'Allergy[]' %>
+                <%#= allergy.allergen %>
+              <!--</label>-->
+            <%# end %>
+            <%= f.collection_check_boxes :allergies, @allergies, :id, :allergen, include_hidden: false %>
+          </div>
+
+          <div class="row field d-grid text-center mt-3">
+            <%= f.label :住所（都道府県）, class: "col-md-4 text-left" %>
+            <%= f.collection_select :state_id , State.all,:id,:state %>
+          </div>
+
+          <div class="row field d-grid text-center mt-3">
+            <%= f.label :住所（地域エリア）, class: "col-md-4 text-left" %>
+            <div id="areas_select" >
+              <%= render partial: 'shared/areas', locals: { areas: Area.all } %>
+            </div>
+          </div>
+
+          <div class="actions2 mt-4 offset-4">
+            <%= f.submit "検索", class: "btn btn-success mx-auto btn-lg" %>
+          </div>
+          <% if customer_signed_in? %>
+            <h4>登録アレルゲンで簡易検索</h4>
+            
+          <% end %>
+        <% end %>
+      </div>
     </div>
+  </div>
+</div>
