--- a/app/views/restaurant/menus/show.html.erb
+++ b/app/views/restaurant/menus/show.html.erb
@@ -15,7 +15,11 @@
         <div class="col-7 mt-5 item_show">
           <h5><strong><%= @menu.name %></strong></h5>
           <div class="mt-3"><%= @menu.introduction %></div>
-          <div class="mt-3"><%= @menu.allergies %></div>
+          <div class="mt-3">
+            <% @menu.allergies.each do |allergen| %>
+              <td><%= menu.allergen %></td>
+            <% end %>
+          </div>
             <!--<th>税込価格</th>-->
           <div class="mt-5"><span>税抜価格（税込価格）</span><br><strong class="price"><%= "#{@menu.price}円" %>(<%= "#{@menu.with_tax_price}円" %>)　</strong></div>
           <div class="col-3 mt-5">
