--- a/app/views/restaurant/homes/top.html.erb
+++ b/app/views/restaurant/homes/top.html.erb
@@ -11,8 +11,8 @@
   <div class= "row">
     <div class= "restaurant_image col-4 mt-4 text-center">
       <% if @restaurant.image.attached? %>
-        <%= link_to restaurant_path(restaurant) do %>
-          <%= image_tag menu.get_image(200,200) %>
+        <%= link_to restaurant_path(@restaurant) do %>
+          <%= image_tag @restaurant.get_image(200,200) %>
         <% end %>
       <% else %>
         <%= link_to restaurant_path(@restaurant) do %>
