--- a/app/views/customer/restaurants/search.html.erb
+++ b/app/views/customer/restaurants/search.html.erb
@@ -9,7 +9,7 @@
           <%#= f.collection_select :menu.name_eq, @restaurants, :sample_product_name, :sample_product_name,  include_blank: '指定なし' %>
           <%#= f.submit '検索' %>
         <%# end %>
-        <%= form_with model: @restaurant, url: restaurants_path, id: 'search_restaurant', class: 'search_restaurant' do |f| %>
+        <%= form_with model: @restaurant, url: restaurants_path,method: :get, id: 'search_restaurant', class: 'search_restaurant' do |f| %>
           <div class="row field d-grid text-center mt-3">
             <p>アレルゲン選択</p>
             <%# @allergies.each do |allergy| %>
@@ -38,7 +38,7 @@
           </div>
           <% if customer_signed_in? %>
             <h4>登録アレルゲンで簡易検索</h4>
-            
+
           <% end %>
         <% end %>
       </div>
