Change customer.rb of madels

--- a/app/views/customer/customers/show.html.erb
+++ b/app/views/customer/customers/show.html.erb
@@ -37,6 +37,10 @@
           <th>電話番号</th>
           <td><%= @customer.telephone_number %></td>
         </tr>
+        <tr>
+          <th>アレルギー</th>
+          <td><%= @customer.allergy_ids %></td>
+        </tr>
       </table>
     </div>
   </div>
