--- a/app/views/customer/restaurants/index.html.erb
+++ b/app/views/customer/restaurants/index.html.erb
@@ -1,2 +1,11 @@
-<h1>飲食店一覧画面</h1>
-<p>Find me in app/views/customer/restaurants/index.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-10 offset-1">
+      <div class ="row mt-5">
+        <h4 class="col-3"><p class="p_1">飲食店一覧 <span style="font-size: 15px"><%= "(全#{@restaurant_count}件)"%></span></p></h4>
+      </div>
+      
+    </div>
+  </div>
+</div>
+
