--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,2 +1,44 @@
 <h1>顧客編集画面</h1>
 <p>Find me in app/views/admin/customers/edit.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-10 offset-1">
+      <h4 class="col-6 mt-5"><%= "#{@customer.full_name}さんの会員情報編集" %></h4>
+
+      <%= form_with model: @customer, url:admin_customer_path, method: :patch do |f| %>
+
+      　<div class="row field d-grid text-center mt-3">
+          <%= f.label :会員ID, class: "col-md-3" %>
+          <div class="col-md-2">
+            <%= @customer.id %>
+          </div>
+        </div>
+      　<!--<tr>-->
+       <!--   <th>会員ID</th>-->
+       <!--   <td><%= @customer.id %></td>-->
+       <!-- </tr>-->
+
+        <div class="row field d-grid text-center">
+          <%= f.label :氏名, class: "col-md-3 text-left" %>
+          <%= f.text_field :first_name, autofocus: true, required: true, class: "col-md-3" %>
+          <%= f.text_field :last_name, autofocus: true, required: true, class: "col-md-3 ml-2" %>
+        </div>
+
+        <div class="row field d-grid text-center mt-4">
+          <%= f.label :フリガナ, class: "col-md-3 text-left" %>
+          <%= f.text_field :first_name_kana, autofocus: true, required: true, class: "col-md-3" %>
+          <%= f.text_field :last_name_kana, autofocus: true, required: true, class: "col-md-3 ml-2" %>
+        </div>
+
+        <div class="row field d-grid text-center mt-4">
+          <%= f.label :メールアドレス, class: "col-md-3 text-left" %>
+          <%= f.email_field :email, autofocus: true, class: "col-md-6" %>
+        </div>
+
+        <div class="row form-group mt-4 ml-26">
+          <%= f.submit '変更を保存', class:"btn btn-success" %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
