--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,2 +1,32 @@
-<h1>顧客一覧画面</h1>
-<p>Find me in app/views/admin/customers/index.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-10 offset-1">
+      <h4 class="col-2 mt-5">会員一覧</h4>
+      <table class="table table-hover mt-4">
+        <thead class="table-secondary">
+          <th>会員ID</th>
+          <th>氏名</th>
+          <th>メールアドレス</th>
+          <th>退会ステーサス</th>
+        </thead>
+        <tbody>
+          <% @customers.each do |customer| %>
+            <tr>
+              <td><%= customer.id %></td>
+              <td><%= link_to customer.full_name, admin_customer_path(customer.id) %></td>
+              <td><%= customer.email %></td>
+              <td>
+                <% if customer.is_valid == false %>
+                  <p class="customer_valid">退会</p>
+                <% else %>
+                  <p class="customer_valid2">有効</p>
+                <% end %>
+              </td>
+            </tr>
+          <% end %>
+          <%= paginate @customers %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
