--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -71,8 +71,8 @@
                   <% end %>
                 </li>
                 <li>
-                  <%= link_to admin_customers_path, class:"nav-link text-light" do %>
-                    <strong>会員一覧</strong>
+                  <%= link_to admin_path, class:"nav-link text-light" do %>
+                    <strong>店舗一覧</strong>
                   <% end %>
                 </li>
                 <li>
