--- a/app/views/admin/restaurants/edit.html.erb
+++ b/app/views/admin/restaurants/edit.html.erb
@@ -1,2 +1,32 @@
-<h1>管理者飲食店情報編集画面</h1>
-<p>Find me in app/views/admin/restaurants/edit.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-10 offset-1">
+      <h4 class="col-6 mt-5"><%= "#{@restaurant.name}の店舗情報編集" %></h4>
+
+      <%= form_with model: @restaurant, url:admin_restaurant_path, method: :patch do |f| %>
+
+      　<div class="row field d-grid text-center mt-3">
+          <%= f.label :会員ID, class: "col-md-3" %>
+          <div class="col-md-2">
+            <%= @restaurant.id %>
+          </div>
+        </div>
+
+
+        <div class="row field d-grid text-center">
+          <%= f.label :店名, class: "col-md-3 text-left" %>
+          <%= f.text_field :name, autofocus: true, required: true, class: "col-md-3" %>
+        </div>
+
+        <div class="row field d-grid text-center mt-4">
+          <%= f.label :メールアドレス, class: "col-md-3 text-left" %>
+          <%= f.email_field :email, autofocus: true, class: "col-md-6" %>
+        </div>
+
+        <div class="row form-group mt-4 ml-26">
+          <%= f.submit '変更を保存', class:"btn btn-success" %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
