--- a/app/views/customer/restaurants/search.html.erb
+++ b/app/views/customer/restaurants/search.html.erb
@@ -5,7 +5,8 @@
       <div class="search-data">
         <h4 class="col-3 mt-5">飲食店検索</h4>
 
-        <%= form_with model: @restaurant, url: restaurants_path,method: :get, id: 'search_restaurant', class: 'search_restaurant' do |f| %>
+
+        <%= form_with url: restaurants_path,method: :get, id: 'search_restaurant', class: 'search_restaurant', local: true do |f| %>
           <div class="row field d-grid text-center mt-3">
             <%= f.label :アレルゲン選択, class: "col-md-4 text-left" %>
             <%= f.collection_check_boxes :allergies, @allergies, :id, :allergen, include_hidden: false %>
@@ -19,7 +20,7 @@
           <div class="row field d-grid text-center mt-3">
             <%= f.label :住所（地域エリア）, class: "col-md-4 text-left" %>
             <div id="areas_select" >
-              <%= render partial: 'shared/areas', locals: { areas: Area.all } %>
+              <%= render partial: 'shared/search_restaurants_areas', locals: { areas: Area.all } %>
             </div>
           </div>
 
