--- a/app/views/customer/restaurants/index.html.erb
+++ b/app/views/customer/restaurants/index.html.erb
@@ -14,12 +14,12 @@
           <% @restaurants.each do |restaurant| %>
             <tr>
               <td>
-                <% if restaurant.image.attached? %>
-                  <%= image_tag restaurant.get_image(60,50) %>
-                <% else %>
-                  <%= image_tag 'default-image.jpg', size: "60x50" %>
-                <% end %>
-                <%= link_to restaurant.name, restaurants_path(restaurant.id) %>
+                <%# if restaurant.image.attached? %>
+                  <%#= image_tag restaurant.get_image(60,50) %>
+                <%# else %>
+                  <%#= image_tag 'default-image.jpg', size: "60x50" %>
+                <%# end %>
+                <%= link_to restaurant.name, restaurant_path(restaurant.id) %>
               </td>
               <td><%= restaurant.address %></td>
               <td><%= restaurant.regular_holiday %></td>
