--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
                   <% end %>
                 </li>
                 <li>
-                  <%= link_to restaurants_search_path, class:"nav-link text-light" do %>
+                  <%= link_to search_restaurants_path, class:"nav-link text-light" do %>
                     <strong>飲食店検索</strong>
                   <% end %>
                 </li>
@@ -133,7 +133,7 @@
                   <% end %>
                 </li>
                 <li>
-                  <%= link_to restaurants_search_path, class:"nav-link text-light" do %>
+                  <%= link_to search_restaurants_path, class:"nav-link text-light" do %>
                     <strong>飲食店検索</strong>
                   <% end %>
                 </li>
