--- a/app/views/customer/restaurants/show.html.erb
+++ b/app/views/customer/restaurants/show.html.erb
@@ -8,7 +8,7 @@
 
   <h5 class="mt-4">
     <%= @restaurant.name %>
-    <%= link_to "メニュー一覧", menus_information_path, class:"btn btn-success ml-4"%>
+    <%= link_to "メニュー一覧", restaurant_menus_path, class:"btn btn-success ml-4"%>
   </h5>
   <div class= "row">
     <div class= "restaurant_image col-4 mt-4 text-center">
