--- a/app/views/restaurant/homes/top.html.erb
+++ b/app/views/restaurant/homes/top.html.erb
@@ -6,24 +6,25 @@
 
   <h5 class="mt-4">
     <%= @restaurant.name %>
-    <%= link_to "編集する", restaurant_information_edit_path, class:"btn btn-success ml-4"%>
+    <%= link_to "編集する", restaurant_information_edit_path(@restaurant.id), class:"btn btn-success ml-4"%>
   </h5>
   <div class= "row">
     <div class= "restaurant_image col-4 mt-4 text-center">
-      <% if @restaurant.image.attached? %>
-        <%= link_to restaurant_path(@restaurant) do %>
-          <%= image_tag @restaurant.get_image(200,200) %>
-        <% end %>
-      <% else %>
-        <%= link_to restaurant_path(@restaurant) do %>
-          <%= image_tag 'default-image.jpg', size: "200x200" %>
-        <% end %>
-      <% end %>
       <%# if @restaurant.image.attached? %>
-        <%#= image_tag @restaurant.get_image(200,200) %>
+        <%#= link_to restaurant_path(@restaurant) do %>
+          <%#= image_tag @restaurant.get_image(200,200) %>
+        <%# end %>
       <%# else %>
-        <%#= image_tag 'default-image.jpg', size: "200x200" %>
+        <%#= link_to restaurant_path(@restaurant) do %>
+          <%#= image_tag 'default-image.jpg', size: "200x200" %>
+        <%# end %>
       <%# end %>
+
+      <% if @restaurant.image.attached? %>
+        <%= image_tag @restaurant.get_image(200,200) %>
+      <% else %>
+        <%= image_tag 'default-image.jpg', size: "200x200" %>
+      <% end %>
     </div>
     <div class= "col-8 mt-4">
       <%= @restaurant.introduction %>
