--- a/app/views/restaurant/menus/new.html.erb
+++ b/app/views/restaurant/menus/new.html.erb
@@ -13,7 +13,7 @@
           <% end %>
         </ul>
       <% end %>
-      <%= form_with model: @menu, url: restaurant_menus_path, id: 'new_menu', class: 'new_menu' do |f| %>
+      <%= form_with model: @menu, url: restaurant_restaurant_menus_path, id: 'new_menu', class: 'new_menu' do |f| %>
 
         <div class="row field d-grid text-center mt-4">
           <%= f.label :料理画像, class: "col-md-2" %>
