Change show.html.erb of views/restaurant/menu

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -102,12 +102,12 @@
                   <% end %>
                 </li>
                 <li>
-                  <%= link_to restaurant_restaurant_menus_path(@restaurant.id), class:"nav-link text-light" do %>
+                  <%= link_to restaurant_restaurant_menus_path, class:"nav-link text-light" do %>
                     <strong>メニュー一覧</strong>
                   <% end %>
                 </li>
                 <li>
-                  <%= link_to new_restaurant_restaurant_menu_path(@restaurant.id), class:"nav-link text-light" do %>
+                  <%= link_to new_restaurant_restaurant_menu_path, class:"nav-link text-light" do %>
                     <strong>メニュー追加</strong>
                   <% end %>
                 </li>
