--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,11 +40,6 @@
                   <% end %>
                 </li>
                 <li>
-                  <%= link_to customers_favorite_index_path, class:"nav-link text-light" do %>
-                    <strong>お気に入り</strong>
-                  <% end %>
-                </li>
-                <li>
                   <%= link_to destroy_customer_session_path, method: :delete, class:"nav-link text-light" do %>
                     <strong>ログアウト</strong>
                   <% end %>
@@ -102,12 +97,12 @@
                   <% end %>
                 </li>
                 <li>
-                  <%= link_to restaurant_restaurant_menus_path, class:"nav-link text-light" do %>
+                  <%= link_to restaurant_restaurant_menus_path(@restaurant), class:"nav-link text-light" do %>
                     <strong>メニュー一覧</strong>
                   <% end %>
                 </li>
                 <li>
-                  <%= link_to new_restaurant_restaurant_menu_path, class:"nav-link text-light" do %>
+                  <%= link_to new_restaurant_restaurant_menu_path(@restaurant), class:"nav-link text-light" do %>
                     <strong>メニュー追加</strong>
                   <% end %>
                 </li>
