--- a/app/views/restaurant/homes/edit.html.erb
+++ b/app/views/restaurant/homes/edit.html.erb
@@ -28,7 +28,10 @@
 
           <div class="row field d-grid text-center mt-3">
             <%= f.label :地域エリア, class: "col-md-3 text-left" %>
-            <%= f.collection_select :area_id , get_areas,:id,:area %>
+            <div id="areas_select" >
+              <%= render partial: 'shared/restaurant_areas', locals: { areas: Area.all } %>
+            </div>
+            <%#= f.collection_select :area_id , get_areas,:id,:area %>
             <!--<div id="areas_select" >-->
               <%#= render partial: 'shared/areas', locals: { areas: Area.all } %>
             <!--</div>-->
