--- a/app/views/restaurant/menus/edit.html.erb
+++ b/app/views/restaurant/menus/edit.html.erb
@@ -4,7 +4,7 @@
       <div class="row">
         <h4 class="col-4 mt-5">メニュー編集</h4>
         <div class="mt-4">
-          <%= form_with model: @menu ,url: restaurant_menu_path, method: :patch do |f| %>
+          <%= form_with model: @menu ,url: restaurant_restaurant_menu_path, method: :patch do |f| %>
             <div class="row field d-grid text-center mt-4">
               <%= f.label :料理画像, class: "col-md-2" %>
               <%= f.file_field :image, accept: "image/*", class: "col-md-6" %>
