--- a/app/views/customer/restaurants/search.html.erb
+++ b/app/views/customer/restaurants/search.html.erb
@@ -6,7 +6,7 @@
         <h4 class="col-3 mt-5">飲食店検索</h4>
 
 
-        <%= form_with url: restaurants_path,method: :get, id: 'search_restaurant', class: 'search_restaurant', local: true do |f| %>
+        <%= form_with model: @customer, url: restaurants_path,method: :get, id: 'search_restaurant', class: 'search_restaurant', local: true do |f| %>
           <div class="row field d-grid text-center mt-3">
             <%= f.label :アレルゲン選択, class: "col-md-4 text-left" %>
             <%= f.collection_check_boxes :allergies, @allergies, :id, :allergen, include_hidden: false %>
@@ -32,8 +32,10 @@
             <% if customer_signed_in? %>
               <h4>登録アレルゲンで簡易検索</h4>
               <div class="text-center mt-3">
-                <%= f.submit "都道府県で検索", class: "btn btn-primary" %>
-                <%= f.submit "地域エリアで検索", class: "btn btn-primary ml-3" %>
+                <p>アレルゲンを登録した会員の方は</br>
+                  <%= link_to "こちら", member_search_restaurants_path %>
+                  で簡単に検索する事ができます。
+                </p>
               </div>
             <% end %>
           </div>
