--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,6 +40,11 @@
                   <% end %>
                 </li>
                 <li>
+                  <%= link_to member_search_restaurants_path, class:"nav-link text-light" do %>
+                    <strong>会員検索</strong>
+                  <% end %>
+                </li>
+                <li>
                   <%= link_to destroy_customer_session_path, method: :delete, class:"nav-link text-light" do %>
                     <strong>ログアウト</strong>
                   <% end %>
