--- a/app/views/customer/restaurants/search.html.erb
+++ b/app/views/customer/restaurants/search.html.erb
@@ -6,7 +6,7 @@
         <h4 class="col-3 mt-5">飲食店検索</h4>
 
 
-        <%= form_with model: @customer, url: restaurants_path,method: :get, id: 'search_restaurant', class: 'search_restaurant', local: true do |f| %>
+        <%= form_with url: restaurants_path,method: :get, id: 'search_restaurant', class: 'search_restaurant', local: true do |f| %>
           <div class="row field d-grid text-center mt-3">
             <%= f.label :アレルゲン選択, class: "col-md-4 text-left" %>
             <%= f.collection_check_boxes :allergies, @allergies, :id, :allergen, include_hidden: false %>
