--- a/app/views/areas/index.html.erb
+++ b/app/views/areas/index.html.erb
@@ -2,7 +2,7 @@
   <%= render "shared/areas", areas: @areas %>
 <% elsif @type == "restaurant" %>
   <%= render "shared/restaurant_areas", areas: @areas %>
-<% elsif @type == "search" %>
-  <%= render "shared/search_restaurants_areas", areas: @areas %>
+<% elsif @type == "admin" %>
+  <%= render "shared/admin_areas", areas: @areas %>
 <% end %>
 
