--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -35,6 +35,23 @@
           <%= f.email_field :email, autofocus: true, class: "col-md-6" %>
         </div>
 
+        <div class="row field d-grid text-center mt-3">
+          <%= f.label :住所（都道府県）, class: "col-md-4 text-left" %>
+          <%= f.collection_select :state_id , State.all,:id,:state %>
+        </div>
+
+        <div class="row field d-grid text-center mt-3">
+          <%= f.label :住所（地域エリア）, class: "col-md-4 text-left" %>
+          <div id="areas_select" >
+            <%= render partial: 'shared/areas', locals: { areas: Area.all } %>
+          </div>
+        </div>
+
+        <div class="row field d-grid text-center mt-3">
+          <%= f.label :電話番号（ハイフンなし）, class: "col-md-4 text-left" %><br />
+          <%= f.text_field :telephone_number, required: true, class: "col-md-3" %>
+        </div>
+
         <div class="row form-group mt-4 ml-26">
           <%= f.submit '変更を保存', class:"btn btn-success" %>
         </div>
