--- a/app/views/admin/restaurants/show.html.erb
+++ b/app/views/admin/restaurants/show.html.erb
@@ -17,10 +17,41 @@
           <th>店名</th>
           <td><%= @restaurant.name %></td>
         </tr>
-
+        <tr>
+          <th>都道府県</th>
+          <td><%= @state %></td>
+        </tr>
+        <tr>
+          <th>地域エリア</th>
+          <td><%= @area %></td>
+        </tr>
+        <tr>
+          <th>それ以降の住所</th>
+          <td><%= @restaurant.address %></td>
+        </tr>
+        <tr>
+          <th>電話番号</th>
+          <td><%= @restaurant.telephone_number %></td>
+        </tr>
         <tr>
           <th>メールアドレス</th>
           <td><%= @restaurant.email %></td>
+        </tr>
+        <tr>
+          <th>定休日</th>
+          <td><%= @restaurant.regular_holiday %></td>
+        </tr>
+        <tr>
+          <th>営業時間</th>
+          <td><%= @restaurant.business_hours %></td>
+        </tr>
+        <tr>
+          <th>ホームページURL</th>
+          <td><%= @restaurant.home_page %></td>
+        </tr>
+        <tr>
+          <th>駐車場</th>
+          <td><%= @restaurant.parking %></td>
         </tr>
         <tr>
           <th>退会ステーサス</th>
