--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -40,6 +40,14 @@
           <td><%= @customer.telephone_number %></td>
         </tr>
         <tr>
+          <th>アレルギー一覧</th>
+          <td>
+            <% @customer.allergies.each do |allergy| %>
+              <%= allergy.allergen %>
+            <% end %>
+          </td>
+        </tr>
+        <tr>
           <th>退会ステーサス</th>
           <td>
             <% if @customer.is_valid == false %>
