--- a/app/views/customer/homes/about.html.erb
+++ b/app/views/customer/homes/about.html.erb
@@ -8,7 +8,7 @@
           <p class="about">
             Enme（エンミー）は食物アレルギーにより外食に不安を持っている方々にも</br>
             楽しい食事（Enjoyable meal）をしていただける様、</br>
-            アレルギー対策を行なっている関西の飲食店にご協力いただき</br>
+            アレルギー表記を行なっている関西の飲食店にご協力いただき</br>
             アレルゲンや地域からメニューや飲食店を検索できるサイトになります。</br>
             会員でない方でも検索はできますが、</br>
             飲食店のお気に入り登録やご自身のアレルゲンを登録し、</br>
@@ -26,38 +26,38 @@
         　</p>
         　<div class="area_image row">
           　<div>
-            　<%= link_to 'osaka.jpeg', "data-lightbox" => 'osaka.jpeg' do %>
-                <%= image_tag 'osaka.jpeg', height: '250', :style=>"width:300;"%>
+            　<%= link_to asset_path('osaka.jpg'), "data-lightbox" => 'osaka.jpg' do %>
+                <%= image_tag 'osaka.jpg', height: '250', :style=>"width:300;"%>
               <% end %>
               <p class="about"><strong>大阪府</strong></p>
             </div>
             <div class="ml-4">
-            　<%= link_to 'kyoto.jpeg', "data-lightbox" => 'kyoto.jpeg' do %>
-                <%= image_tag 'kyoto.jpeg', height: '250', :style=>"width:300;"%>
+            　<%= link_to asset_path('kyoto.jpg'), "data-lightbox" => 'kyoto.jpg' do %>
+                <%= image_tag 'kyoto.jpg', height: '250', :style=>"width:300;"%>
               <% end %>
               <p class="about"><strong>京都府</strong></p>
             </div>
             <div class="ml-4">
-            　<%= link_to 'hyogo.jpeg', "data-lightbox" => 'hyogo.jpeg' do %>
-                <%= image_tag 'hyogo.jpeg', height: '250', :style=>"width:300;"%>
+            　<%= link_to asset_path('hyogo.jpg'), "data-lightbox" => 'hyogo.jpg' do %>
+                <%= image_tag 'hyogo.jpg', height: '250', :style=>"width:300;"%>
               <% end %>
               <p class="about"><strong>兵庫県</strong></p>
             </div>
             <div class="ml-3">
-            　<%= link_to 'nara.jpeg', "data-lightbox" => 'nara.jpeg' do %>
-                <%= image_tag 'nara.jpeg', height: '250', :style=>"width:300;"%>
+            　<%= link_to asset_path('nara.jpg'), "data-lightbox" => 'nara.jpg' do %>
+                <%= image_tag 'nara.jpg', height: '250', :style=>"width:300;"%>
               <% end %>
               <p class="about"><strong>奈良県</strong></p>
             </div>
             <div class="ml-5">
-            　<%= link_to 'wakayama.jpeg', "data-lightbox" => 'wakayama.jpeg' do %>
-                <%= image_tag 'wakayama.jpeg', height: '250', :style=>"width:300;"%>
+            　<%= link_to asset_path('wakayama.jpg'), "data-lightbox" => 'wakayama.jpg' do %>
+                <%= image_tag 'wakayama.jpg', height: '250', :style=>"width:300;"%>
               <% end %>
               <p class="about"><strong>和歌山県</strong></p>
             </div>
             <div class="ml-4">
-            　<%= link_to 'shiga.jpeg', "data-lightbox" => 'shiga.jpeg' do %>
-                <%= image_tag 'shiga.jpeg', height: '250', :style=>"width:300;"%>
+            　<%= link_to asset_path('shiga.jpg'), "data-lightbox" => 'shiga.jpg' do %>
+                <%= image_tag 'shiga.jpg', height: '250', :style=>"width:300;"%>
               <% end %>
               <p class="about"><strong>滋賀県</strong></p>
             </div>
