Change restaurnts_controller.rb of customer

--- a/app/views/customer/menus/index.html.erb
+++ b/app/views/customer/menus/index.html.erb
@@ -28,6 +28,9 @@
             </div>
           <% end %>
         </div>
+        <div class = "row mt-4">
+          <p class ="p_1"><%= link_to ">>店舗詳細に戻る", restaurant_path(@restaurant) %></p>
+        </div>
 
         <div class="mt-3"><%= paginate @menus %></div>
 
