Change button of view/customers

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -31,9 +31,9 @@ body {
 }
 
 h4, h6 {
-  color: maroon;
+  color: #6e4a55;
   border-radius: 4px;
-  background-color: #d8e698 ;
+  background-color: #bccddb ;
 }
 
 h1{
