--- a/app/views/customer/restaurants/search.html.erb
+++ b/app/views/customer/restaurants/search.html.erb
@@ -7,9 +7,14 @@
 
 
         <%= form_with model: @customer, url: restaurants_path,method: :get, id: 'search_restaurant', class: 'search_restaurant', local: true do |f| %>
-          <div class="row field d-grid text-center mt-3">
+          <div class="row field d-grid text-center  mt-3">
             <%= f.label :アレルゲン選択, class: "col-md-4 text-left" %>
-            <%= f.collection_check_boxes :allergies, @allergies, :id, :allergen, include_hidden: false %>
+            <div class="allergies_check_boxes col-md-7">
+              <%= f.collection_check_boxes(:allergies, @allergies, :id, :allergen, include_hidden: false) do |a| %>
+                <%= a.label { a.check_box + a.text } %>
+              <% end %>
+              <%#= f.collection_check_boxes :allergies, @allergies, :id, :allergen, include_hidden: false %>
+            </div>
           </div>
 
           <div class="row field d-grid text-center mt-3">
@@ -30,7 +35,7 @@
             <% end %>
           </div>
 
-          <div class="actions2 col-6 mt-4">
+          <div class="actions2 col-6 mt-5">
             <% if customer_signed_in? %>
               <h4>登録アレルゲンで簡易検索</h4>
               <div class="text-center mt-3">
